[tool.poetry]
name = "dune"
version = "0.1.0"
description = "python based Dune Imperium board game"
authors = ["Cheolseung Jung <jung.cheolseung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pycodestyle = "^2.10.0"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
